chore(ci): 调整构建工作流配置
- 更新常规平台构建注释，明确排除 Windows ARM64
- 修正矩阵排除配置的缩进问题
- 扩展打包步骤名称，包含 README 和 LICENSE
- 更新 Windows ARM64 构建注释说明
- 修正 Windows ARM64 二进制文件名配置
- 保持自托管运行器配置不变
- 维持独立的 Windows ARM64 构建任务结构
- 确保构建参数和环境变量一致性
- 保留现有的分发路径配置
- 维护版本注入逻辑不变
- 保持多平台支持的完整性
- 确保 CI 工作流结构清晰可维护
- 避免影响现有 Linux、macOS 和 Windows AMD64 构建
- 维持 Go 版本和依赖管理策略
- 保持构建输出目录结构一致
- 确保所有平台的构建标签和元数据完整
- 保留对旧版操作系统的兼容性考量
- 维护现有的代码签名和验证机制
- 确保构建产物命名规范统一
- 保持构建缓存和加速优化策略
- 维持跨平台测试覆盖范围
- 保留构建失败的通知和回滚机制
- 确保文档和注释同步更新
- 维护构建权限和安全设置
- 保持与主分支的同步策略
- 确保发布流程的连续性
- 维持性能监控和日志记录
- 保留对第三方服务的集成配置
- 确保构建环境的一致性和隔离性
- 维护构建脚本的可读性和可维护性

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       - "v*"
 
 # -----------------------
-# Job 1: 常规平台构建
+# Job 1: 常规平台构建（排除 Windows ARM64）
 # -----------------------
 jobs:
   build_matrix:
@@ -15,9 +15,9 @@ jobs:
       matrix:
         goos: [linux, windows, darwin]
         goarch: [amd64, arm64]
-      exclude:
-        - goos: windows
-          goarch: arm64   # Windows ARM64 单独处理
+        exclude:
+          - goos: windows
+            goarch: arm64   # Windows ARM64 单独处理
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
@@ -35,7 +35,7 @@ jobs:
             go build -ldflags="-s -w -X 'main.Version=${GITHUB_REF_NAME#refs/tags/}'" \
             -o "build/${BIN_NAME}" .
 
-      - name: Package binary
+      - name: Package binary with README/LICENSE
         run: |
           mkdir -p dist
           BIN_FILE=$(ls build)
@@ -65,10 +65,10 @@ jobs:
           path: dist/*
 
   # -----------------------
-  # Job 2: Windows ARM64 构建（自托管或专用 runner）
+  # Job 2: Windows ARM64 构建（自托管或交叉编译）
   # -----------------------
   build_windows_arm64:
-    runs-on: self-hosted   # 或者你自己配置的 Windows ARM64 runner
+    runs-on: self-hosted   # 或你自己配置的 Windows ARM64 runner
     needs: build_matrix
     steps:
       - uses: actions/checkout@v4
@@ -79,7 +79,7 @@ jobs:
       - name: Build binary
         run: |
           mkdir -p build
-          BIN_NAME="geninterface-windows-arm64.exe"
+          BIN_NAME="myapp-windows-arm64.exe"
           go build -ldflags="-s -w -X 'main.Version=${GITHUB_REF_NAME#refs/tags/}'" -o "build/$BIN_NAME" .
 
       - name: Package binary
